[gd_scene load_steps=9 format=3 uid="uid://bbs7rvkt7kaxd"]

[ext_resource type="Script" uid="uid://mng4w5wf6242" path="res://scenes/user_interface/main_menu/main_menu.gd" id="1_bv0at"]
[ext_resource type="FontFile" uid="uid://5lsjbw6sbj53" path="res://resources/fonts/DungeonFont.ttf" id="2_kibp0"]
[ext_resource type="Texture2D" uid="uid://larbo423ld3g" path="res://scenes/user_interface/main_menu/move_inputs.png" id="3_kibp0"]
[ext_resource type="AudioStream" uid="uid://cpny55adc2hjr" path="res://scenes/user_interface/main_menu/Menu.wav" id="4_5yh40"]
[ext_resource type="Texture2D" uid="uid://c0ng74823avcb" path="res://scenes/user_interface/main_menu/run.png" id="4_w5fdl"]
[ext_resource type="Texture2D" uid="uid://df1xrhlcros5n" path="res://scenes/user_interface/main_menu/change_weapon.png" id="5_01m43"]
[ext_resource type="Texture2D" uid="uid://dlsj43ti34vs4" path="res://scenes/user_interface/main_menu/attack.png" id="6_01m43"]
[ext_resource type="LabelSettings" uid="uid://d18ip1ak2mg3j" path="res://resources/styles/label_settings.tres" id="7_tlslw"]

[node name="MainMenu" type="CanvasLayer"]
script = ExtResource("1_bv0at")

[node name="MarginContainer" type="MarginContainer" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
theme_override_constants/margin_left = 16
theme_override_constants/margin_top = 16
theme_override_constants/margin_right = 16
theme_override_constants/margin_bottom = 16

[node name="Title" type="Control" parent="MarginContainer"]
unique_name_in_owner = true
visible = false
layout_mode = 2
mouse_filter = 2

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer/Title"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -476.0
offset_top = -67.0
offset_right = 480.0
offset_bottom = 67.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
theme_override_constants/separation = 20

[node name="TitleLabel" type="RichTextLabel" parent="MarginContainer/Title/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_vertical = 4
mouse_filter = 2
theme_override_fonts/normal_font = ExtResource("2_kibp0")
theme_override_font_sizes/normal_font_size = 132
bbcode_enabled = true
text = "[shake rate=10
.0 level=10
 connected=1]Tachyon Soul[/shake]"
fit_content = true
scroll_active = false
horizontal_alignment = 1
vertical_alignment = 1

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer/Title/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
mouse_filter = 2

[node name="StartButton" type="Button" parent="MarginContainer/Title/VBoxContainer/HBoxContainer"]
unique_name_in_owner = true
visible = false
layout_mode = 2
size_flags_vertical = 4
theme_override_colors/font_color = Color(1, 0, 0, 1)
theme_override_fonts/font = ExtResource("2_kibp0")
theme_override_font_sizes/font_size = 32
text = "Re-animate"

[node name="Controls" type="Control" parent="MarginContainer"]
unique_name_in_owner = true
layout_mode = 2
mouse_filter = 2

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer/Controls"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -353.0
offset_top = -82.5
offset_right = 353.0
offset_bottom = 82.5
grow_horizontal = 2
grow_vertical = 2

[node name="Inputs" type="HBoxContainer" parent="MarginContainer/Controls/VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 30

[node name="MoveInput" type="VBoxContainer" parent="MarginContainer/Controls/VBoxContainer/Inputs"]
layout_mode = 2

[node name="TextureRect" type="TextureRect" parent="MarginContainer/Controls/VBoxContainer/Inputs/MoveInput"]
custom_minimum_size = Vector2(192, 128)
layout_mode = 2
texture = ExtResource("3_kibp0")

[node name="RichTextLabel" type="RichTextLabel" parent="MarginContainer/Controls/VBoxContainer/Inputs/MoveInput"]
layout_mode = 2
theme_override_fonts/normal_font = ExtResource("2_kibp0")
theme_override_font_sizes/normal_font_size = 32
bbcode_enabled = true
text = "[shake rate=10
.0 level=10
 connected=1]Move[/shake]"
fit_content = true
scroll_active = false
horizontal_alignment = 1
vertical_alignment = 1

[node name="SprintInput" type="VBoxContainer" parent="MarginContainer/Controls/VBoxContainer/Inputs"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 8

[node name="TextureRect" type="TextureRect" parent="MarginContainer/Controls/VBoxContainer/Inputs/SprintInput"]
custom_minimum_size = Vector2(128, 64)
layout_mode = 2
texture = ExtResource("4_w5fdl")

[node name="RichTextLabel" type="RichTextLabel" parent="MarginContainer/Controls/VBoxContainer/Inputs/SprintInput"]
layout_mode = 2
theme_override_fonts/normal_font = ExtResource("2_kibp0")
theme_override_font_sizes/normal_font_size = 32
bbcode_enabled = true
text = "[shake rate=10
.0 level=10
 connected=1]Sprint[/shake]"
fit_content = true
scroll_active = false
horizontal_alignment = 1
vertical_alignment = 1

[node name="ChangeWeapon" type="VBoxContainer" parent="MarginContainer/Controls/VBoxContainer/Inputs"]
layout_mode = 2
size_flags_vertical = 8

[node name="TextureRect" type="TextureRect" parent="MarginContainer/Controls/VBoxContainer/Inputs/ChangeWeapon"]
custom_minimum_size = Vector2(192, 64)
layout_mode = 2
texture = ExtResource("5_01m43")

[node name="RichTextLabel" type="RichTextLabel" parent="MarginContainer/Controls/VBoxContainer/Inputs/ChangeWeapon"]
layout_mode = 2
theme_override_fonts/normal_font = ExtResource("2_kibp0")
theme_override_font_sizes/normal_font_size = 32
bbcode_enabled = true
text = "[shake rate=10
.0 level=10
 connected=1]Change Weapon[/shake]"
fit_content = true
scroll_active = false
horizontal_alignment = 1
vertical_alignment = 1

[node name="AttackInput" type="VBoxContainer" parent="MarginContainer/Controls/VBoxContainer/Inputs"]
layout_mode = 2
size_flags_vertical = 8

[node name="TextureRect" type="TextureRect" parent="MarginContainer/Controls/VBoxContainer/Inputs/AttackInput"]
custom_minimum_size = Vector2(104, 56)
layout_mode = 2
texture = ExtResource("6_01m43")

[node name="RichTextLabel" type="RichTextLabel" parent="MarginContainer/Controls/VBoxContainer/Inputs/AttackInput"]
layout_mode = 2
theme_override_fonts/normal_font = ExtResource("2_kibp0")
theme_override_font_sizes/normal_font_size = 32
bbcode_enabled = true
text = "[shake rate=10
.0 level=10
 connected=1]Attack
[/shake]"
fit_content = true
scroll_active = false
horizontal_alignment = 1
vertical_alignment = 1

[node name="TimerStart" type="VBoxContainer" parent="MarginContainer/Controls"]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -353.0
offset_right = 353.0
grow_horizontal = 2
grow_vertical = 0

[node name="Monologue" type="Label" parent="MarginContainer/Controls/TimerStart"]
unique_name_in_owner = true
layout_mode = 2
text = "Get the Tachyon Soul Engine working. We gotta put this foul thing to 
work. We got the hosts ready for iterations? Good. We are getting that
crown back one way or another. Let's just get started."
label_settings = ExtResource("7_tlslw")
horizontal_alignment = 1
vertical_alignment = 1
visible_characters = 0
visible_ratio = 0.0

[node name="Time" type="RichTextLabel" parent="MarginContainer/Controls/TimerStart"]
visible = false
layout_mode = 2
theme_override_fonts/normal_font = ExtResource("2_kibp0")
theme_override_font_sizes/normal_font_size = 64
bbcode_enabled = true
text = "10.00"
fit_content = true
scroll_active = false
horizontal_alignment = 1

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource("4_5yh40")
